[package]
name = "discounted-zeroone-knapsack"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
csv = "1.3.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
